--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: 23.7.0  # Replace with the latest Black version or tag
+    rev: 23.7.0
     hooks:
       - id: black
 
   - repo: https://github.com/pycqa/flake8
-    rev: 7.1.0  # Replace with the latest Flake8 version or tag
+    rev: 7.1.0
     hooks:
       - id: flake8
