--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,68 @@
+appnope==0.1.4
+asttokens==3.0.0
 beautifulsoup4==4.12.3
 black==24.10.0
 certifi==2024.12.14
 cfgv==3.4.0
 charset-normalizer==3.4.1
 click==8.1.8
+comm==0.2.2
+debugpy==1.8.11
+decorator==5.1.1
 distlib==0.3.9
+exceptiongroup==1.2.2
+executing==2.1.0
 filelock==3.16.1
 flake8==7.1.1
 frozendict==2.4.6
 html5lib==1.1
 identify==2.6.5
 idna==3.10
+ipykernel==6.29.5
+ipython==8.31.0
+isort==5.13.2
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 lxml==5.3.0
+matplotlib-inline==0.1.7
 mccabe==0.7.0
 multitasking==0.0.11
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 nodeenv==1.9.1
 numpy==2.2.1
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
 pathspec==0.12.1
 peewee==3.17.8
+pexpect==4.9.0
 platformdirs==4.3.6
 pre_commit==4.0.1
+prompt_toolkit==3.0.48
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pycodestyle==2.12.1
 pyflakes==3.2.0
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
 requests==2.32.3
 six==1.17.0
 soupsieve==2.6
+stack-data==0.6.3
+tokenize_rt==6.1.0
 tomli==2.2.1
+tornado==6.4.2
+traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
 virtualenv==20.28.1
+wcwidth==0.2.13
 webencodings==0.5.1
 yfinance==0.2.51
